--- a/index.html
+++ b/index.html
@@ -1148,7 +1148,8 @@ input {
 
 .fit-width {
     /* fits width of conetent */
-    min-width: max-content; 
+    display: grid;
+    width: max-content;
 }
 .fit-rest {
     /* fits remaining width */
@@ -1820,9 +1821,8 @@ New Wave:  U = U * fb                 ;With feedback.
     <td colspan='2'>
         <div class="card-rounded grad-blue small space-between middle">
             <div>
-                <span>copyright all rights reserved 2021 by Ronald Adam</span>
+                <span>Copyright all rights reserved 2021 by Ronald Adam</span>
                 <span class="tab14">Version: 1.0A</span>
-                GitHub: ______
             </div>
             <div>
                 <div class="tab16">Video FPS: <span id="video_frame_rate" style="color:#0000a0"> 0 </span></div>
