--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Emergent Behaviors In Waves</title>
     <meta http-equiv="content-type"
           content="text/html; charset=utf-8">
+    <meta http-equiv="expires" content="0">
     <meta name="author"
           content="Ronald Adam" >
     <meta name="description"
