Update version and title.
Update meta title information.
And version to 1.0-7

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     
 <head>
-    <title>Simulation Of Quantified Behaviors In 2D Waves</title>
+    <title>Quantized Energy Behavior From Waves</title>
     <meta http-equiv="content-type"
           content="text/html; charset=utf-8">
     
@@ -1462,7 +1462,7 @@ input {
                                 mechanism for energy to quantify from waves.
                             </p>
                             <p>
-                                Version-1.0-6<br>
+                                Version-1.0-7<br>
                                 Date: 12/28/2021<br>
                                 Copyright 2021 Ronald R. Adam
                             </p>
@@ -1710,8 +1710,8 @@ input {
     <td colspan='2'>
         <div class="card-rounded grad-blue small space-between middle">
             <div>
-                <span>Copyright all rights reserved 2021 by Ronald Adam</span>&nbsp;&nbsp;
-                <span class="tab14">Version: 1.0A</span>
+                <span>Copyright 2021 by Ronald Adam</span>&nbsp;&nbsp;
+                <span class="tab14">Version: 1.0</span>
             </div>
             <div>
                 <div class="tab16">Video FPS: <span id="video_frame_rate" style="color:#0000a0"> 0 </span></div>
